# ChangeLog for app-misc/jsonpipe
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Mar 2012; James Rowe <jnrowe@gmail.com> jsonpipe-0.0.8-r1.ebuild:
  Keyworded amd64.

  19 Mar 2012; James Rowe <jnrowe@gmail.com> jsonpipe-0.0.8.ebuild:
  Switched to EAPI4.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> jsonpipe-0.0.8-r1.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> jsonpipe-0.0.8.ebuild,
  jsonpipe-0.0.8-r1.ebuild:
  Removed Python 2.4 support.

*jsonpipe-0.0.8-r1 (20 Feb 2012)

  20 Feb 2012; James Rowe <jnrowe@gmail.com> +jsonpipe-0.0.8-r1.ebuild,
  +files/jsonpipe-0.0.8-use_stdlib_json.patch:
  Really support standard lib json.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  07 Jul 2011; James Rowe <jnrowe@gmail.com> jsonpipe-0.0.8.ebuild:
  Keyworded amd64.

  16 Jun 2011; James Rowe <jnrowe@gmail.com> -jsonpipe-0.0.7.ebuild,
  jsonpipe-0.0.8.ebuild:
  Keyworded x86.

  12 Jun 2011; James Rowe <jnrowe@gmail.com> jsonpipe-0.0.7.ebuild:
  Keyworded amd64.

*jsonpipe-0.0.8 (07 Jun 2011)

  07 Jun 2011; James Rowe <jnrowe@gmail.com> +jsonpipe-0.0.8.ebuild:
  Version bump [385].

  18 May 2011; James Rowe <jnrowe@gmail.com> jsonpipe-0.0.7.ebuild:
  Keyworded ~x86.

  14 May 2011; James Rowe <jnrowe@gmail.com> jsonpipe-0.0.7.ebuild:
  Fixed typo in RDEPEND.

*jsonpipe-0.0.7 (12 May 2011)

  12 May 2011; James Rowe <jnrowe@gmail.com> +jsonpipe-0.0.7.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [329].
