@@ -31,8 +31,7 @@
  * Licence: ``public-domain``
  * Versions:
 
-  * `0.0.8 <https://github.com/JNRowe/jnrowe-misc/blob/master/app-misc/jsonpipe/jsonpipe-0.0.8.ebuild>`__  ``amd64``, ``x86``
-  * `0.0.8-r1 <https://github.com/JNRowe/jnrowe-misc/blob/master/app-misc/jsonpipe/jsonpipe-0.0.8-r1.ebuild>`__  ``amd64``, ``~x86`` (due 2012-03-21)
+  * `0.0.8-r1 <https://github.com/JNRowe/jnrowe-misc/blob/master/app-misc/jsonpipe/jsonpipe-0.0.8-r1.ebuild>`__  ``amd64``, ``x86``
 
 * ``libeatmydata`` - http://www.flamingspork.com/projects/libeatmydata/
 
