@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare setup
-DEPEND=dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-DESCRIPTION=Convert JSON to a UNIX-friendly line-based format
-EAPI=4
-HOMEPAGE=http://pypi.python.org/pypi/jsonpipe/
-KEYWORDS=amd64 x86
-LICENSE=public-domain
-RDEPEND=dev-python/setuptools || ( >=dev-lang/python-2.6 dev-python/simplejson ) || ( dev-python/argparse >=dev-lang/python-2.7 ) dev-python/calabash >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-SLOT=0
-SRC_URI=mirror://pypi/j/jsonpipe/jsonpipe-0.0.8.tar.gz
-_eclasses_=distutils	15ae23f6f8219a009bfcfff7724fe727	eutils	ba24d79270ea0022703f16b5de80051c	jnrowe-pypi	c6b06bd5e6250ef1ef368932ebd260cf	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	dc3993dc1961bbb13c11bb835390ca29	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=b7e20e5ca425cf4e001a56f94f78dd58
