@@ -1,4 +1,3 @@
-REM 2012-03-21 *1 MSG %"Stabilise x86 app-misc/jsonpipe-0.0.8-r1%" %a
 REM 2012-03-24 *1 MSG %"Stabilise x86 dev-python/attest-0.5.2%" %a
 REM 2012-03-29 *1 MSG %"Stabilise amd64 dev-python/termtool-1.0%" %a
 REM 2012-03-29 *1 MSG %"Stabilise x86 dev-python/termtool-1.0%" %a
